--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
             required
             >
             <span class="form__input-error description-input-error"></span>
-            <button type="submit" class="button popup__button save-edit-profile__button">Сохранить</button>
+            <button type="submit" class="button popup__button save-edit-profile__button" data-button-text="Сохранить">Сохранить</button>
           </form>
         </div>
       </div>
@@ -99,7 +99,7 @@
             required
             >
             <span class="form__input-error link-input-error"></span>
-            <button type="submit" class="button popup__button save-new-place__button">Сохранить</button>
+            <button type="submit" class="button popup__button save-new-place__button" data-button-text="Сохранить">Сохранить</button>
           </form>
         </div>
       </div>
@@ -124,7 +124,7 @@
               required
             />
             <span class="avatar-input-error popup__input-error"></span>
-            <button type="submit" class="button popup__button">Сохранить</button>
+            <button type="submit" class="button popup__button" data-button-text="Сохранить">Сохранить</button>
           </form>
         </div>
       </div>
