--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
           <form 
           class="popup__form" 
           name="edit-profile" 
-          >
+          novalidate>
             <input 
             type="text" 
             id="name-input" 
@@ -89,6 +89,7 @@
             pattern="^[a-zA-Zа-яА-ЯёЁ\-\s]+$" 
             data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             required
+            novalidate
             >
             <span class="form__input-error place-name-input-error"></span>
             <input 
@@ -114,7 +115,7 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Обновить аватар</h3>
-          <form class="popup__form" name="edit-avatar" data-id="">
+          <form class="popup__form" name="edit-avatar" data-id="" novalidate>
             <input
               type="url"
               name="url"
